# privacy-token-fhe

./: .gitignore  Cargo.toml  README.md  foundry.toml
cache/: solidity-files-cache.json
src/: main.rs
src/contracts/: fheETH.sol
src/fhe_account_handler/: get_keys.rs  user.rs
src/fhe_node/: fhe_execution.rs  fhe_oracle.rs
src/fhe_tx_sender/: contract_deployer.rs  tx_sender.rs
src/rocket_helper/: structs.rs
test/: fheETH.t.sol
