[package]
name = "privacy-token-fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fhe = { version = "^0.1.0-beta.5", path = "fhe.rs/crates/fhe" }
fhe-traits = { version = "^0.1.0-beta.4", path = "fhe.rs/crates/fhe-traits" }
ethers = "2.0.7"
