[package]
name = "privacy-token-fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fhe = { version = "^0.1.0-beta.5", path = "fhe.rs/crates/fhe" }
fhe-traits = { version = "^0.1.0-beta.4", path = "fhe.rs/crates/fhe-traits" }
ethers = "2.0.7"
rocket = "0.4.7"
rocket_cors = "0.5.2"
rocket_contrib = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
eyre = "0.6.8"
